--- a/assets/pages/gallery.html
+++ b/assets/pages/gallery.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,6 +43,7 @@
         }
     </style>
 </head>
+
 <body>
     <!-- Шапка -->
     <header class="header">
@@ -112,8 +114,10 @@
                 <a href="stanislav.html" class="footer__link">Автор сайта</a>
             </div>
             <div class="footer__social">
-                <a href="https://vk.com/club199046020" target="_blank" rel="noopener noreferrer" class="social__link" aria-label="ВКонтакте">VK</a>
-                <a href="https://t.me/Odyssey_Cinema_Club_bot" target="_blank" rel="noopener noreferrer" class="social__link" aria-label="Telegram">TG</a>
+                <a href="https://vk.com/club199046020" target="_blank" rel="noopener noreferrer" class="social__link"
+                    aria-label="ВКонтакте">VK</a>
+                <a href="https://t.me/Odyssey_Cinema_Club_bot" target="_blank" rel="noopener noreferrer"
+                    class="social__link" aria-label="Telegram">TG</a>
             </div>
             <p class="footer__copyright">© 2025 Киноклуб "ОДИССЕЯ".</p>
         </div>
@@ -129,4 +133,5 @@
     <script src="../js/script.js"></script>
     <script src="../js/gallery.js"></script>
 </body>
+
 </html>
