--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Киноклуб "ОДИССЕЯ"</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/seasons.css">
     <meta name="description"
         content="Киноклуб Одиссея - место для настоящих ценителей кино. Обсуждения фильмов, топ-рейтинги и архив встреч.">
     <meta name="keywords" content="кино, киноклуб, фильмы, обсуждение, рейтинги, Одиссея">
 </head>
 
 <body>
+    <div id="seasons-container"></div>
+
     <!-- Шапка -->
     <header class="header">
         <a href="#" class="logo" aria-label="Киноклуб Одиссея - главная страница">
@@ -291,6 +294,7 @@
     </footer>
 
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/seasons.js"></script>
     <button id="scroll-to-top" class="load-more-btn" aria-label="Наверх" title="Наверх">
         ↑
     </button>
