--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <div class="map-container fade-in delay-1">
             <div id="map" style="width: 100%; height: 400px;"></div>
             <div class="map-info">
+                <!-- Содержимое будет обновляться динамически -->
                 <h3>Кофейня "Том Сойер"</h3>
                 <p>ул. Шмидта, 12, Севастополь</p>
                 <a href="https://vk.com/tomsoyerbartending" target="_blank" rel="noopener noreferrer"
