--- a/assets/pages/stanislav.html
+++ b/assets/pages/stanislav.html
@@ -57,7 +57,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('../images/imag-header.jpg') center/cover no-repeat;
+            background: url('../images/labenskiy/imag-header.jpg') center/cover no-repeat;
             opacity: 0.3;
             z-index: 1;
         }
@@ -741,31 +741,31 @@
         <h3 class="section-title">🖼️ Галерея</h3>
         <div class="scroll-gallery">
             <div class="scroll-gallery-item">
-                <img src="../images/imag-1.jpg" alt="Тестирование веб-приложения">
+                <img src="../images/labenskiy/imag-1.jpg" alt="Тестирование веб-приложения">
                 <div class="scroll-gallery-caption">Тестирование веб-приложения</div>
             </div>
             <div class="scroll-gallery-item">
-                <img src="../images/imag-2.jpg" alt="Автоматизация тестирования">
+                <img src="../images/labenskiy/imag-2.jpg" alt="Автоматизация тестирования">
                 <div class="scroll-gallery-caption">Автоматизация тестирования</div>
             </div>
             <div class="scroll-gallery-item">
-                <img src="../images/imag-3.jpg" alt="Командная работа">
+                <img src="../images/labenskiy/imag-3.jpg" alt="Командная работа">
                 <div class="scroll-gallery-caption">Командная работа</div>
             </div>
             <div class="scroll-gallery-item">
-                <img src="../images/imag-4.jpg" alt="API тестирование">
+                <img src="../images/labenskiy/imag-4.jpg" alt="API тестирование">
                 <div class="scroll-gallery-caption">API тестирование</div>
             </div>
             <div class="scroll-gallery-item">
-                <img src="../images/imag-5.jpg" alt="Нагрузочное тестирование">
+                <img src="../images/labenskiy/imag-5.jpg" alt="Нагрузочное тестирование">
                 <div class="scroll-gallery-caption">Нагрузочное тестирование</div>
             </div>
             <div class="scroll-gallery-item">
-                <img src="../images/imag-6.jpg" alt="Анализ">
+                <img src="../images/labenskiy/imag-6.jpg" alt="Анализ">
                 <div class="scroll-gallery-caption">Анализ</div>
             </div>
             <div class="scroll-gallery-item">
-                <img src="../images/imag-7.jpg" alt="Коммуникация">
+                <img src="../images/labenskiy/imag-7.jpg" alt="Коммуникация">
                 <div class="scroll-gallery-caption">Коммуникация</div>
             </div>
         </div>
@@ -1007,11 +1007,11 @@
     <div class="resume-section gallery-section">
         <h3 class="section-title">📷 Характеристика</h3>
         <div class="gallery-grid">
-            <div class="gallery-item" onclick="openModal('../images/characteristic-one.jpg')">
-                <img src="../images/characteristic-one.jpg" alt="Характеристика часть 1">
+            <div class="gallery-item" onclick="openModal('../images/labenskiy/characteristic-one.jpg')">
+                <img src="../images/labenskiy/characteristic-one.jpg" alt="Характеристика часть 1">
             </div>
-            <div class="gallery-item" onclick="openModal('../images/characteristic-two.jpg')">
-                <img src="../images/characteristic-two.jpg" alt="Характеристика часть 2">
+            <div class="gallery-item" onclick="openModal('../images/labenskiy/characteristic-two.jpg')">
+                <img src="../images/labenskiy/characteristic-two.jpg" alt="Характеристика часть 2">
             </div>
         </div>
     </div>
