--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href="#top-films" class="nav__link">Топы</a>
             <a href="#contacts" class="nav__link">Контакты</a>
             <a href="#film-archive" class="nav__link">Фильмы</a>
+            <a href="/assets/pages/setup-guide.html" class="nav__link active">Настройка устройств</a>
         </nav>
         <button class="mobile-menu-btn" aria-label="Меню" aria-expanded="false">☰</button>
     </header>
@@ -283,6 +284,7 @@
                 <a href="#film-archive" class="footer__link">Фильмы</a>
                 <a href="#contacts" class="footer__link">Контакты</a>
                 <a href="assets/pages/stanislav.html" class="footer__link">Автор сайта</a>
+                <a href="/assets/pages/setup-guide.html" class="footer__link active">Настройка устройств</a>
             </div>
             <div class="footer__social">
                 <a href="https://vk.com/club199046020" target="_blank" rel="noopener noreferrer" class="social__link"
