--- a/assets/pages/setup-guide.html
+++ b/assets/pages/setup-guide.html
@@ -339,7 +339,8 @@
                         <div class="parameter-card">
                             <h4>Выбор программного обеспечения</h4>
                             <div class="parameter-value">Приложение / Web</div>
-                            <p>Существует множество способов настроить компьютер для просмотра фильмов. Все они имеют право на существование, но если вам интересно, я могу рассказать о своём варианте</p>
+                            <p>Существует множество способов настроить компьютер для просмотра фильмов. Все они имеют
+                                право на существование, но если вам интересно, я могу рассказать о своём варианте</p>
                         </div>
 
                         <div class="parameter-card">
@@ -363,15 +364,22 @@
                 <div class="software-item">
                     <h4>Zona</h4>
                     <div class="software-rating">★★★★☆</div>
-                    <p>Это самый простой и быстрый способ найти и посмотреть любой фильм, мультфильм или сериал. Идеально оптимизирован для мобильного браузера, но отлично работает и на компьютере, обеспечивая беспроблемный просмотр.</p>
-                    <a href="https://w140.zona.plus/" target="_blank" rel="noopener noreferrer"class="download-link">Перейти</a>
-                    <a href="https://y1.zona.ru/download_1.html" target="_blank" rel="noopener noreferrer"class="download-link">Скачать приложение на компьютер</a>
+                    <p>Это самый простой и быстрый способ найти и посмотреть любой фильм, мультфильм или сериал.
+                        Идеально оптимизирован для мобильного браузера, но отлично работает и на компьютере, обеспечивая
+                        беспроблемный просмотр.</p>
+                    <a href="https://w140.zona.plus/" target="_blank" rel="noopener noreferrer"
+                        class="download-link">Перейти</a>
+                    <a href="https://y1.zona.ru/download_1.html" target="_blank" rel="noopener noreferrer"
+                        class="download-link">Скачать приложение на компьютер</a>
                 </div>
 
                 <div class="software-item">
                     <h4>КИНОПОИСК</h4>
                     <div class="software-rating">★★★☆☆</div>
-                    <p>Это популярный ресурс с обширной библиотекой изображений по фильмам и мультфильмам. Несмотря на то, что количество доступных для просмотра картин не самое большое, сервис предлагает их за небольшую стоимость подписки, предоставляет фильмы, мультфильмы и сериалы в достойном качестве переводов и хорошей картинки.</p>
+                    <p>Это популярный ресурс с обширной библиотекой изображений по фильмам и мультфильмам. Несмотря на
+                        то, что количество доступных для просмотра картин не самое большое, сервис предлагает их за
+                        небольшую стоимость подписки, предоставляет фильмы, мультфильмы и сериалы в достойном качестве
+                        переводов и хорошей картинки.</p>
                     <a href="https://hd.kinopoisk.ru/" target="_blank" rel="noopener noreferrer"
                         class="download-link">Перейти</a>
                 </div>
@@ -428,7 +436,8 @@
                 <div class="setup-image">
                     <img src="../../assets/images/setup/phone-setup.png" alt="Настройка смартфона для просмотра фильмов"
                         loading="lazy" onerror="this.src='../../assets/images/default-poster.jpg'">
-                    <div class="image-caption">Пример оптимальных настроек мобильного устройства! Настройка самостоятельная, будьте внимательны и всё у вас получится.</div>
+                    <div class="image-caption">Пример оптимальных настроек мобильного устройства! Настройка
+                        самостоятельная, будьте внимательны и всё у вас получится.</div>
                 </div>
             </div>
 
