--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
             ОДИССЕЯ
         </a>
         <nav class="nav" aria-label="Основная навигация">
-            <a href="#about" class="nav__link">О киноклубе</a>
+            <a href="#about" class="nav__link active">О киноклубе</a>
             <a href="#top-films" class="nav__link">Топы</a>
             <a href="#contacts" class="nav__link">Контакты</a>
             <a href="#film-archive" class="nav__link">Фильмы</a>
-            <a href="assets/pages/setup-guide.html" class="nav__link active">Настройка устройств</a>
+            <a href="assets/pages/quiz.html" class="nav__link">Квиз Odissea</a>
+            <a href="assets/pages/setup-guide.html" class="nav__link">Настройка устройств</a>
         </nav>
         <button class="mobile-menu-btn" aria-label="Меню" aria-expanded="false">☰</button>
     </header>
@@ -279,12 +280,13 @@
         <div class="footer__content">
             <div class="footer__logo">ОДИССЕЯ</div>
             <div class="footer__links">
-                <a href="#about" class="footer__link">О нас</a>
+                <a href="#about" class="footer__link active">О нас</a>
                 <a href="#top-films" class="footer__link">Топы</a>
                 <a href="#film-archive" class="footer__link">Фильмы</a>
                 <a href="#contacts" class="footer__link">Контакты</a>
                 <a href="assets/pages/stanislav.html" class="footer__link">Автор сайта</a>
-                <a href="assets/pages/setup-guide.html" class="footer__link active">Настройка устройств</a>
+                <a href="assets/pages/quiz.html" class="footer__link">Квиз Odissea</a>
+                <a href="assets/pages/setup-guide.html" class="footer__link">Настройка устройств</a>
             </div>
             <div class="footer__social">
                 <a href="https://vk.com/club199046020" target="_blank" rel="noopener noreferrer" class="social__link"
