--- a/assets/pages/setup-guide.html
+++ b/assets/pages/setup-guide.html
@@ -27,6 +27,7 @@
             <a href="../../index.html#top-films" class="nav__link">Топы</a>
             <a href="../../index.html#contacts" class="nav__link">Контакты</a>
             <a href="../../index.html#film-archive" class="nav__link">Фильмы</a>
+            <a href="quiz.html" class="nav__link">Квиз Odissea</a>
             <a href="setup-guide.html" class="nav__link active">Настройка устройств</a>
         </nav>
         <button class="mobile-menu-btn" aria-label="Меню" aria-expanded="false">☰</button>
