--- a/assets/pages/quiz.html
+++ b/assets/pages/quiz.html
@@ -7,12 +7,13 @@
     <title>Квиз "Odissea" | Киноклуб ОДИССЕЯ</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/quiz.css">
+    <link rel="stylesheet" href="../css/seasons.css">
     <meta name="description" content="Квиз Odissea - проверьте свои знания о кино! Увлекательная викторина от киноклуба Одиссея.">
     <meta name="keywords" content="кино, квиз, викторина, тест, фильмы, Одиссея">
 </head>
 
 <body>
-    <div id="seasons-container"></div>
+    <div class="seasons-container" id="seasons-container"></div>
 
     <!-- Шапка -->
     <header class="header">
@@ -155,6 +156,23 @@
     <button id="scroll-to-top" class="load-more-btn" aria-label="Наверх" title="Наверх">
         ↑
     </button>
+
+    <!-- Добавляем скрипт для принудительной инициализации сезонных эффектов -->
+    <script>
+        // Принудительная инициализация сезонных эффектов для страницы квиза
+        document.addEventListener('DOMContentLoaded', function() {
+            // Ждем немного, чтобы основной скрипт сезонов загрузился
+            setTimeout(function() {
+                // Если сезонные эффекты еще не инициализированы, инициализируем их
+                if (typeof window.seasonalEffects === 'undefined') {
+                    console.log('Инициализируем сезонные эффекты для страницы квиза...');
+                    window.seasonalEffects = new SeasonalEffects();
+                } else {
+                    console.log('Сезонные эффекты уже инициализированы');
+                }
+            }, 500);
+        });
+    </script>
 </body>
 
 </html>
