--- a/assets/pages/quiz.html
+++ b/assets/pages/quiz.html
@@ -35,7 +35,7 @@
     <!-- Герой секция -->
     <section class="hero quiz-hero">
         <div class="hero__content">
-            <h1 class="hero__title">Квиз Odissea</h1>
+            <h1 class="hero__title">Квиз Odissea "DEMO"</h1>
             <p class="hero__subtitle">Проверь свои знания о кино!</p>
             <div class="hero__cta">
                 <a href="#quiz-start" class="btn btn--primary">Начать квиз</a>
