--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <!-- Квиз Odissea -->
-            <a href="quiz.html" class="nav__link">
+            <a href="assets/pages/quiz.html" class="nav__link">
                 Квиз Odissea<sup class="demo-badge">DEMO</sup>
             </a>
         </nav>
