--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
         <div class="hero__image">
             <img src="assets/images/logo-group-vk.jpg" alt="Участники киноклуба на встрече" class="hero__image-img"
                 width="600" height="400" loading="lazy">
-            <div class="film-strip-overlay"></div>
         </div>
     </section>
 
@@ -314,8 +313,6 @@
                 <a href="#film-archive" class="footer__link">Фильмы</a>
                 <a href="#contacts" class="footer__link">Контакты</a>
                 <a href="assets/pages/stanislav.html" class="footer__link">Автор сайта</a>
-                <a href="assets/pages/setup-guide.html" class="footer__link">Настройка устройств</a>
-                <a href="assets/pages/quiz.html" class="footer__link">Квиз Odissea</a>
             </div>
             <div class="footer__social">
                 <a href="https://vk.com/club199046020" target="_blank" rel="noopener noreferrer" class="social__link"
@@ -323,7 +320,7 @@
                 <a href="https://t.me/Odyssey_Cinema_Club_bot" target="_blank" rel="noopener noreferrer"
                     class="social__link" aria-label="Telegram">TG</a>
             </div>
-            <p class="footer__copyright">© 2025 Киноклуб "ОДИССЕЯ".</p>
+            <p class="footer__copyright">© 2025 Киноклуб "ОДИССЕЯ"</p>
         </div>
     </footer>
 
