--- a/assets/pages/setup-guide.html
+++ b/assets/pages/setup-guide.html
@@ -55,9 +55,18 @@
             </div>
 
             <!-- Квиз Odissea -->
-            <a href="quiz.html" class="nav__link">
-                Квиз Odissea<sup class="demo-badge">DEMO</sup>
-            </a>
+            <div class="nav-dropdown">
+                <a href="" class="nav__link dropdown-toggle">
+                    Игры
+                    <svg width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
+                        <path d="M3 4.5L6 7.5L9 4.5H3Z" />
+                    </svg>
+                </a>
+                <div class="dropdown-menu">
+                    <a href="quiz.html" class="dropdown-item">Квиз Odissea<sup class="demo-badge">DEMO</sup></a>
+                    <a href="Interactive-game.html" class="dropdown-item">Интерактивная игра</a>
+                </div>
+            </div>
         </nav>
         <button class="mobile-menu-btn" aria-label="Меню" aria-expanded="false">☰</button>
     </header>
