--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
 
     <!-- Шапка -->
     <header class="header">
-        <a href="index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
+        <a href="../../index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
             <div class="logo__icon"></div>
             ОДИССЕЯ
         </a>
         <nav class="nav" aria-label="Основная навигация">
             <!-- Главная -->
             <div class="nav-dropdown">
-                <a href="index.html" class="nav__link dropdown-toggle active">
+                <a href="../../index.html" class="nav__link dropdown-toggle active">
                     Главная
                     <svg width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
                         <path d="M3 4.5L6 7.5L9 4.5H3Z" />
                     </svg>
                 </a>
                 <div class="dropdown-menu">
-                    <a href="index.html#about" class="dropdown-item">О киноклубе</a>
-                    <a href="index.html#top-films" class="dropdown-item">Топы</a>
-                    <a href="index.html#contacts" class="dropdown-item">Контакты</a>
-                    <a href="index.html#film-archive" class="dropdown-item">Фильмы</a>
+                    <a href="../../index.html#about" class="dropdown-item">О киноклубе</a>
+                    <a href="../../index.html#top-films" class="dropdown-item">Топы</a>
+                    <a href="../../index.html#contacts" class="dropdown-item">Контакты</a>
+                    <a href="../../index.html#film-archive" class="dropdown-item">Фильмы</a>
                 </div>
             </div>
 
@@ -54,9 +54,18 @@
             </div>
 
             <!-- Квиз Odissea -->
-            <a href="assets/pages/quiz.html" class="nav__link">
-                Квиз Odissea<sup class="demo-badge">DEMO</sup>
-            </a>
+            <div class="nav-dropdown">
+                <a href="" class="nav__link dropdown-toggle">
+                    Игры
+                    <svg width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
+                        <path d="M3 4.5L6 7.5L9 4.5H3Z" />
+                    </svg>
+                </a>
+                <div class="dropdown-menu">
+                    <a href="assets/pages/quiz.html" class="dropdown-item">Квиз Odissea<sup class="demo-badge">DEMO</sup></a>
+                    <a href="assets/pages/Interactive-game.html" class="dropdown-item">Интерактивная игра</a>
+                </div>
+            </div>
         </nav>
         <button class="mobile-menu-btn" aria-label="Меню" aria-expanded="false">☰</button>
     </header>
