--- a/assets/pages/Interactive-game.html
+++ b/assets/pages/Interactive-game.html
@@ -53,9 +53,9 @@
                 </div>
             </div>
 
-            <!-- Квиз Odissea -->
+            <!-- Игры -->
             <div class="nav-dropdown">
-                <a href="" class="nav__link dropdown-toggle">
+                <a href="" class="nav__link dropdown-toggle active">
                     Игры
                     <svg width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
                         <path d="M3 4.5L6 7.5L9 4.5H3Z" />
@@ -64,6 +64,7 @@
                 <div class="dropdown-menu">
                     <a href="quiz.html" class="dropdown-item">Квиз Odissea<sup class="demo-badge">DEMO</sup></a>
                     <a href="Interactive-game.html" class="dropdown-item">Интерактивная игра</a>
+                    <a href="crocodile-game.html" class="dropdown-item">Крокодил<sup class="demo-tiny">NEW</sup></a>
                 </div>
             </div>
         </nav>
